Chore: fix header spacing

--- a/src/Components/Main/styles.module.scss
+++ b/src/Components/Main/styles.module.scss
@@ -4,7 +4,7 @@
   gap: 1.2rem;
 
   position: relative;
-  top: -100px;
+  top: -80px;
 
   margin: 1.1rem 1rem;
   margin-bottom: 0;
@@ -16,6 +16,8 @@
 
   @media (min-width: 600px) {
     width: 60%;
+    top: -100px;
+
     margin: 1.1rem auto;
     margin-bottom: 0;
     font-size: 1.2rem;
